<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_career_display">CareerDisplay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="career_name">Career</string>
    <string name="ability_name">Ability</string>
    <string name="ability_desc">Description</string>
    <string name="ability_prereqs">Prerequisites</string>
    <string name="assisted_label">Assisted Use</string>
    <string name="untrained_use_desc">untrained use description</string>
    <string name="untrained_use_yn">Untrained_Use</string>
    <string name="used_untrained_label">Can use untrained?</string>
    <string name="stat_label">Stat Used :</string>
    <string name="skill_name_placeholder">Skill</string>
    <string name="assisted_use_desc">assisted use description</string>
    <string name="untrained_use_label">Untrained Use</string>
    <string name="stat_placeholder">stat</string>
    <string name="skill_type_placeholder">type</string>
    <string name="spell_cost_label">COST</string>
    <string name="range_label">RNG</string>
    <string name="aoe_label">AOE</string>
    <string name="pow_label">POW</string>
    <string name="up_label">UP</string>
    <string name="off_labe">OFF</string>
    <string name="spell_desc_placeholder">spell description</string>
    <string name="spell_name_placeholder">Spell</string>
    <string name="connection_name">Connection</string>
    <string name="book_placeholder">which book</string>
    <string name="book_label">Book :</string>
    <string name="search_placeholder">Search…</string>
    <string name="search">"Search "</string>
    <string name="maxslvl">"Max SLVL : "</string>
</resources>
