<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ability_name"
        android:id="@+id/ability_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="35sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ability_prereqs"
        android:id="@+id/ability_prereqs_label"
        android:layout_below="@+id/ability_name"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_abil_desc"
        android:layout_below="@+id/desc_label">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ability_desc"
            android:id="@+id/ability_desc"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textSize="17sp" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ability_desc"
        android:id="@+id/desc_label"
        android:layout_below="@+id/ability_prereqs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/ability_prereqs"
        android:layout_below="@+id/ability_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ability_prereqs_label"
        android:layout_alignBottom="@+id/ability_prereqs"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:gravity="end"
        android:maxLines="2"
        android:layout_toRightOf="@+id/ability_prereqs_label" />

</RelativeLayout>